# cross-media-measurement-api

./: .bazelrc  MODULE.bazel  WORKSPACE.bzlmod  maven_install.json
.github/workflows/: build-test.yml  main.yml  publish-edp-jar.yml
imports/java/com/google/protobuf/: BUILD.bazel
src/main/proto/wfa/measurement/api/v2alpha/: BUILD.bazel  pom.tmpl
